--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,9 +1,9 @@
 <div class="doodles-nav hidden">
   <ul class="nav-menu">
-    <li class="dropdown"><a href="#" >about us</a>
-      <div class="dropdown-content">
+    <li id="nav-about" class="dropdown"><a href="#" >about us</a>
+      <!-- <div class="dropdown-content">
         <p>Hello World!</p>
-      </div>
+      </div> -->
     </li>
     <li class="<%= 'current' if current_page?('/projects') %>"><a href="/projects">projects</a></li>
     <li id="nav-logo"><a href="/"><%= image_tag 'doodle_white_logo_only.png', alt:"Doodles Academy", size: "40" %></a></li>
