--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,17 +15,18 @@
 
   <section class="lesson-gallery-wrapper">
     <div id="lesson-gallery">
+      <a><%= image_tag 'left-arrow.png', class: "left-arrow" %></a>
       <div id="gal_left">
         <img class="img_left">
-        <a><%= image_tag 'left-arrow.png', class: "left-arrow" %></a>
+        <small>images from 'Near & Far' project</small>
       </div>
       <div id="gal_right">
         <img class="img_right">
-        <a><%= image_tag 'right-arrow.png', class: "right-arrow" %></a>
         <a class="btn btn-xl btn-blue" href='/projects'>
           See Projects
         </a>
       </div>
+      <a><%= image_tag 'right-arrow.png', class: "right-arrow" %></a>
     </div>
   </section>
 
