--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -126,7 +126,8 @@
   }
 
   #homepage-lesson-gallery-section {
-    margin-bottom: -140px;
+    margin-bottom: -80px;
+    margin-top: -80px;
   }
 
   #homepage-lesson-gallery-div {
