darkened color of section

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -85,11 +85,7 @@
     margin-bottom: 100px;
 
     background:
-    linear-gradient(
-      rgba(0, 82, 137, 0.6),
-      rgba(0, 82, 137, 0.6)
-    ),
-    url('u43.png');
+    url('overlay2.jpg');
     background-size: cover;
     width: 100vw;
     height: 750px;
