--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,13 +1,32 @@
 <div class="doodles-nav hidden">
-  <ul class="nav-menu">
-    <li id="nav-about" class="dropdown"><a href="#" >about us</a>
+  <div class="container">
+    <div class="row nav-menu">
+      <div class="col-md-2">
+        <a href="/about">about us</a>
+      </div>
+      <div class="col-md-2">
+        <a href="/projects">projects</a>
+      </div>
+      <div class="col-md-2" id="nav-logo">
+        <a href="/"><%= image_tag 'doodle_white_logo_only.png', alt:"Doodles Academy", size: "40" %></a></li>
+      </div>
+      <div class="col-md-2">
+        <a href="/contact">contact us</a>
+      </div>
+      <div id="nav-donate-btn" class="col-md-2">
+        <a href="/donate">donate</a>
+      </div>
+  <!-- <ul class="nav-menu">
+    <li id="nav-about" class="dropdown"><a href="#" >about us</a> -->
       <!-- <div class="dropdown-content">
         <p>Hello World!</p>
       </div> -->
-    </li>
+    <!-- </li>
     <li class="<%= 'current' if current_page?('/projects') %>"><a href="/projects">projects</a></li>
     <li id="nav-logo"><a href="/"><%= image_tag 'doodle_white_logo_only.png', alt:"Doodles Academy", size: "40" %></a></li>
     <li><a href="#">contact us</a></li>
     <li id="nav-donate-btn"><a href="/donate">donate</a></li>
-  </ul>
+  </ul> -->
+    </div>
+  </div>
 </div>
