--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -6,7 +6,7 @@
 end %>
 <% content_for(:lesson_links) { render "shared/lesson_links", project: @project } %>
 
-<% if @lesson.objective != nil && @lesson.objective != "" %>
+<% if @lesson.has_new_format? %>
  <%= render "lesson" %>
 <% else %>
   <%= render "markdown_lesson" %>
