--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,8 +1,13 @@
 <div class="doodles-nav hidden">
   <div class="container">
     <div class="row nav-menu">
-      <div class="col-md-2">
-        <a href="/about">about us</a>
+      <div class="col-md-2 dropdown">
+        <a>about us</a>
+        <div class="dropdown-content hidden">
+          <a href="/about">our story</a>
+          <a href="/supporters">supporters</a>
+          <a href="/team">team</a>
+        </div>
       </div>
       <div class="col-md-2">
         <a href="/projects">projects</a>
