updating classes page

--- a/app/views/home/classes.html.erb
+++ b/app/views/home/classes.html.erb
@@ -20,22 +20,6 @@
       </thead>
       <tbody>
         <tr>
-          <td>Monday</td>
-          <td class="classes-academy">
-            <p>Lower Academy</p>
-            <small>1st to 2nd grade</small>
-          </td>
-          <td>4:00-4:45pm</td>
-        </tr>
-        <tr>
-          <td>Monday</td>
-          <td class="classes-academy">
-            <p>Upper Academy</p>
-            <small>3rd to 6th grade</small>
-          </td>
-          <td>5:00-5:45pm</td>
-        </tr>
-        <tr>
           <td>Friday</td>
           <td class="classes-academy">
             <p>Upper Academy</p>
@@ -60,7 +44,7 @@
       <ul>
         <li>Location: PCAS, <a target="_blank" href="https://www.google.com/maps/place/Portland+Child+Art/@45.525185,-122.6919999,17z/data=!4m7!1m4!3m3!1s0x549509f82462bb99:0x304a3a0e2520dfe7!2s1819+NW+Everett+St,+Portland,+OR+97209!3b1!3m1!1s0x549509f8273aac97:0x893b86a064c1a753">1819 NW Everett St, Portland, OR 97209</a></li>
         <li>Class size is limited to 5</li>
-        <li>Classes run for a full school year, ending in June</li>
+        <li>Classes run for a full school year</li>
         <li>Email <a target="_blank" href="mailto:tempest@doodles-academy.org">tempest@doodles-academy.org</a> to reserve your spot</li>
       </ul>
     </div>
