added N/A as default for Media under lessons

--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -57,7 +57,13 @@
         <% end %>
       </p>
       <h2 id='media' class="overview-heading anchor">Media</h2>
-      <p><%= @lesson.media %></p>
+      <p>
+        <% if @lesson.media.present? %>
+          <%= @lesson.media %>
+        <% else %>
+          <%= "N/A" %>
+        <% end %>
+      </p>
     <hr />
     </div>
 
