--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -245,10 +245,8 @@
     <p class="centered finished">
     <% if @lesson.next_lesson %>
         <%= lesson_link @lesson.next_lesson, "Next Lesson", class:"btn btn-blue btn-xl" %>
-    <% elsif @project.next_project %>
-        <%= project_link @project.next_project, "Next Project", class:"btn btn-blue btn-xl" %>
-        <h3 class='centered sign-up-below'>Did you enjoy this project? Sign up below to be the first to hear when we release our next project!</h3>
     <% else %>
+      <%= lesson_link @lesson.first_lesson, "First Lesson", class:"btn btn-blue btn-xl" %>
       <h3 class='centered sign-up-below'>Did you enjoy this project? Sign up below to be the first to hear when we release our next project!</h3>
     <% end %>
     </p>
