--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -3,10 +3,10 @@
     <div class="row nav-menu">
       <div class="col-md-2 dropdown">
         <a>about us</a>
-        <div class="dropdown-content hidden">
-          <a href="/about">our story</a>
-          <a href="/supporters">supporters</a>
-          <a href="/team">team</a>
+        <div class="dropdown-content">
+          <a href="/about" hidden>our story</a>
+          <a href="/supporters" hidden>supporters</a>
+          <a href="/team" hidden>team</a>
         </div>
       </div>
       <div class="col-md-2">
