--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -29,11 +29,9 @@
     background-color: $primary-blue;
     height: 65px;
 
-    .brand { //necessary?
+    .brand {
       transform: scale(0.8);
     }
-
-    /////////////////////////////////////////////////
 
     .dropdown {
       position: relative;
@@ -44,7 +42,7 @@
         padding-bottom: 24px;
         margin-top: 33px;
         margin-bottom: 43px;
-        background-color: lighten($primary-blue, 15%);
+        background-color: #70beeb;
       }
     }
 
@@ -54,8 +52,9 @@
         display: none;
         position: absolute;
         left: 0;
-        background-color: lighten($primary-blue, 25%);
+        background-color: #9adaff;
         min-width: 195px;
+        border-radius: 0 0 50px 50px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         padding: 12px 16px;
         margin-top: 24px;
@@ -63,12 +62,16 @@
 
         a {
           display: block;
+          text-transform: lowercase;
+          font-size: 1.1em;
           margin-top: 20px;
-          margin-bottom: 20px;
+          margin-bottom: 40px;
+
+          &:last-child {
+            margin-bottom: 30px;
+          }
         }
     }
-
-    ///////////////////////////////////
   }
 
   .nav-menu {
