--- a/app/assets/stylesheets/subscribe.scss
+++ b/app/assets/stylesheets/subscribe.scss
@@ -1,3 +1,6 @@
 .subscribe-wrapper {
-  margin-top: -10%;
+  background-color: $warm-gray;
+  margin-top: -3%;
+  padding-top: 5%;
+  padding-bottom: 10%;
 }
