--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 <body>
   <%= render "shared/hero" %>
   <%= render "shared/navigation" %>
-  <% if @homepage %>
+  <% if @homepage || @disable_shared %>
   <%= yield %>
   <% else %>
   <div class="wrapper">
@@ -25,7 +25,7 @@
   </div>
   <% end %>
 
-  <%= render "shared/footer" %>
+  <%= render "shared/footer" unless @disable_shared %>
   <%= render "shared/ga" %>
 </body>
 </html>
