--- a/app/views/home/subscribe.html.erb
+++ b/app/views/home/subscribe.html.erb
@@ -1,39 +1,4 @@
-<div class="subscribe-wrapper">
-  <div class="newsletter">
-    <div class="newsletter__notice centered">
-      Stay in touch! Sign up to be notified of new projects and organization updates.
-    </div>
-    <div class="newsletter__form">
-      <%= form_tag("/subscribe") do -%>
-        <%= text_field_tag('subscription[email]', '', class: "input__text", placeholder: 'Your email address') %>
-        <%= submit_tag("Sign Up Here", class: "newsletter__submit") %>
-      <% end -%>
-    </div>
-  </div>
-</div>
-<div class="footer">
-<div class="footer-copyright centered">
-  <hr class="footer-separator">
-  <div class="footer-organization"
-    <span class="uppercase">Doodles Academy</span> is a nonprofit organization fiscally sponsored by Fractured Atlas
-  </div>
-  <div class="footer-social">
-
-    <a href="http://twitter.com/doodlesacademy" target="_blank"><%= image_tag 'TwitterLogo_55acee.png', class:"footer-logo", alt:"Twitter" %></a>
-    |
-    <a href="http://facebook.com/doodlesacademy" target="_blank"><%= image_tag 'FB-f-Logo__blue_50.png', class:"footer-logo", alt:"Facebook"  %></a>
-    |
-    <a href="http://instagram.com/doodlesacademy" target="_blank"><%= image_tag 'Instagram-v051916.png', class:"footer-logo", alt:"Instagram"  %></a>
-    |
-    <a href="https://www.linkedin.com/company/doodles-academy" target="_blank"><%= image_tag 'In-2C-48px-R.png', class:"footer-logo", alt:"Linkedin"  %></a>
-  </div>
-  <div class="footer-social">
-    <%= link_to "Contact", contact_path %>
-    |
-    &copy2016 All Rights Reserved
-  </div>
-  <div class="footer-fair-use">
-    This site presents artworks in the public domain as well as works that are protected by copyright and used in accordance with fair use for informational or educational purposes. If you are the copyright holder of a work of art used within this site and do not agree that it falls under fair use, please <%= link_to "contact us", contact_path %> by email.
-  </div>
-</div>
-</div>
+<div class="subscribe-top"></div>
+<%= render "shared/subscribe" %>
+<div class="subscribe-bottom"></div>
+<%= render "shared/footer" %>
