fixed coffeescript for navbar

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -19,7 +19,7 @@
         <a>contact us</a>
         <div class="dropdown-content">
           <a href="/contact" hidden>get in touch</a>
-          <!-- <a href="#" hidden>join our mailing list</a> -->
+          <a href="/subscribe" hidden>join our mailing list</a>
           <a href="/class" hidden>PDX Classes</a>
         </div>
       </div>
