--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row nav-menu">
       <div class="col-md-2 dropdown">
-        <a>about us</a>
+        <a href="/about">about us</a>
         <div class="dropdown-content">
           <a href="/about" hidden>our story</a>
           <a href="/supporters" hidden>supporters</a>
@@ -16,7 +16,7 @@
         <a href="/"><%= image_tag 'doodle_white_logo_only.png', alt:"Doodles Academy", size: "50", class: "brand" %></a></li>
       </div>
       <div class="col-md-2 dropdown">
-        <a>contact us</a>
+        <a href="/contact">contact us</a>
         <div class="dropdown-content">
           <a href="/contact" hidden>get in touch</a>
           <a href="/subscribe" hidden>join our mailing list</a>
