changed styling on the homepage & nav bar

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -7,6 +7,7 @@ $footer-grey: #9594A4;
 $primary-red: #DA232E;
 $primary-blue: #419ED5;
 $primary-yellow: #FCCC31;
+$primary-green: #CCC92A;
 
 $warm-gray: #999;
 
