changed bootstrap rows on navbar

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,7 +1,7 @@
 <div class="doodles-nav hidden">
   <div class="container">
     <div class="row nav-menu">
-      <div class="col-md-2 dropdown">
+      <div class="col-md-2 col-sm-2 dropdown">
         <a href="/about">about us</a>
         <div class="dropdown-content">
           <a href="/about" hidden>our story</a>
@@ -9,13 +9,13 @@
           <a href="/team" hidden>team</a>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-2">
         <a href="/projects">projects</a>
       </div>
-      <div class="col-md-2" id="nav-logo">
+      <div class="col-md-2 col-sm-2" id="nav-logo">
         <a href="/"><%= image_tag 'doodle_white_logo_only.png', alt:"Doodles Academy", size: "50", class: "brand" %></a></li>
       </div>
-      <div class="col-md-2 dropdown">
+      <div class="col-md-2 col-sm-2 dropdown">
         <a href="/contact">contact us</a>
         <div class="dropdown-content">
           <a href="/contact" hidden>get in touch</a>
@@ -23,7 +23,7 @@
           <a href="/class" hidden>PDX Classes</a>
         </div>
       </div>
-      <div id="nav-donate-btn" class="col-md-2">
+      <div id="nav-donate-btn" class="col-md-2 col-sm-2">
         <a href="/donate">donate</a>
       </div>
     </div>
