--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,34 +1,30 @@
 <div class="doodles-nav hidden">
   <div class="container">
     <div class="row nav-menu">
-      <div class="row col-xs-5">
-        <div class="col-xs-6 dropdown">
-          <a href="/about">about us</a>
-          <div class="dropdown-content">
-            <a href="/about" hidden>our story</a>
-            <a href="/supporters" hidden>supporters</a>
-            <a href="/team" hidden>team</a>
-          </div>
-        </div>
-        <div class="col-xs-6">
-          <a href="/projects">projects</a>
+      <div class="col-md-2 col-sm-2 col-xs-1 dropdown">
+        <a href="/about">about us</a>
+        <div class="dropdown-content">
+          <a href="/about" hidden>our story</a>
+          <a href="/supporters" hidden>supporters</a>
+          <a href="/team" hidden>team</a>
         </div>
       </div>
-      <div class="col-xs-2" id="nav-logo">
+      <div class="col-md-2 col-sm-2 col-xs-1">
+        <a href="/projects">projects</a>
+      </div>
+      <div class="col-md-2 col-sm-2 col-xs-1" id="nav-logo">
         <a href="/"><%= image_tag 'doodle_white_logo_only.png', alt:"Doodles Academy", size: "50", class: "brand" %></a></li>
       </div>
-      <div class="row col-xs-5">
-        <div class="col-xs-6 dropdown">
-          <a href="/contact">contact us</a>
-          <div class="dropdown-content">
-            <a href="/contact" hidden>get in touch</a>
-            <a href="/subscribe" hidden>join our mailing list</a>
-            <a href="/class" hidden>PDX Classes</a>
-          </div>
+      <div class="col-md-2 col-sm-2 col-xs-1 dropdown">
+        <a href="/contact">contact us</a>
+        <div class="dropdown-content">
+          <a href="/contact" hidden>get in touch</a>
+          <a href="/subscribe" hidden>join our mailing list</a>
+          <a href="/class" hidden>PDX Classes</a>
         </div>
-        <div id="nav-donate-btn" class="col-xs-6">
-          <a href="/donate">donate</a>
-        </div>
+      </div>
+      <div id="nav-donate-btn" class="col-md-2 col-sm-2 col-xs-1">
+        <a href="/donate">donate</a>
       </div>
     </div>
   </div>
